err/socle.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/socle'...
Compiling './lib/python3.5/site-packages/socle/atomic.py'...
***   File "./lib/python3.5/site-packages/socle/atomic.py", line 8
    def __init__(self, path, mode=0755, uid=None, gid=None):
                                     ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/socle/boards'...
Compiling './lib/python3.5/site-packages/socle/build.py'...
***   File "./lib/python3.5/site-packages/socle/build.py", line 98
    print "debootstrapping", script+"/"+subarch, "to", rootfs_path
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/socle/config.py'...
***   File "./lib/python3.5/site-packages/socle/config.py", line 60
    MAINMENU = tuple(sorted(MAINMENU, key=lambda (k,v):k))
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/socle/facts.py'...
***   File "./lib/python3.5/site-packages/socle/facts.py", line 40
    for key, value in sorted(locals().items(), key=lambda (k,v):k):
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/socle/menu.py'...
***   File "./lib/python3.5/site-packages/socle/menu.py", line 14
    print "Could not import newt, are you sure either python-snack or python-newt package is installed?"
                                                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/socle/plugins'...
Compiling './lib/python3.5/site-packages/socle/plugins/locale.py'...
***   File "./lib/python3.5/site-packages/socle/plugins/locale.py", line 30
    print "It seems /etc/locale.gen does not exist, are you sure locales are configured properluy? Disabling default locale selection for now"
                                                                                                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/socle/plugins/timezone.py'...
***   File "./lib/python3.5/site-packages/socle/plugins/timezone.py", line 42
    print "It seems /usr/share/zoneinfo does not exist, are you sure tzdata package is installed? Disabling timezone selection for now"
                                                                                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/socle/uboot.py'...
***   File "./lib/python3.5/site-packages/socle/uboot.py", line 15
    print cmd
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/socle-0.7.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
